force-app/main/default/main/default/objects/Benefit_Event__c/Benefit_Event__c.object-meta.xml
<CustomObject>
    <label>Benefit Event</label>
    <nameField>
        <label>Benefit Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Benefit Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>