force-app/main/default/main/default/objects/Benefit_Event__c/fields/Benefit_Individual__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Individual__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Primary Holder</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Benefit_Individual__c.Relation__c</field>
            <operation>equals</operation>
            <value>Self</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Benefit_Individual__c</referenceTo>
    <relationshipLabel>Benefit Events</relationshipLabel>
    <relationshipName>Benefit_Events</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>