force-app/main/default/main/default/objects/Benefit_Event__c/fields/Enrollment_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_End_Date__c</fullName>
    <label>Enrollment End Date</label>
    <type>Date</type>
</CustomField>