force-app/main/default/main/default/objects/Benefit_Event__c/fields/Enrollment_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Start_Date__c</fullName>
    <label>Enrollment Start Date</label>
    <type>Date</type>
</CustomField>